Restore correct test expectation
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/external/glc/BSD-2-Clause.t2.yml
+++ b/tests/licensedcode/data/datadriven/external/glc/BSD-2-Clause.t2.yml
@@ -1,4 +1,5 @@
 license_expressions:
+  - unknown-license-reference
   - bsd-simplified
 notes: |
   License test derived from a file of the BSD-licensed repository at:
