Make license reference its own plugin
It kicks in if license or package are requested as a post-scan plugin

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -158,7 +158,7 @@ console_scripts =
 scancode_pre_scan =
     ignore = scancode.plugin_ignore:ProcessIgnore
     facet = summarycode.facet:AddFacet
-    classify = summarycode.classify:FileClassifier
+    classify = summarycode.classify_plugin:FileClassifier
 
 
 # scancode_scan is the entry point for scan plugins that run a scan after the
@@ -186,9 +186,9 @@ scancode_post_scan =
     license-clarity-score = summarycode.score:LicenseClarityScore
     license-policy = licensedcode.plugin_license_policy:LicensePolicy
     mark-source = scancode.plugin_mark_source:MarkSource
-    is-license-text = licensedcode.plugin_license_text:IsLicenseText
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
+    license-references = licensedcode.licenses_reference:LicenseReference
 
 
 # scancode_output_filter is the entry point for filter plugins executed after
