Do not run tests on vendored dirs #3179 #3192
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ norecursedirs = [
    "tests/data",
    ".eggs",
    "src/*/data",
-   "tests/*/data"
+   "tests/*/data",
+   "src/licensedcode/_vendor/"
 ]
 
 python_files = "*.py"
