Add scancode license data dump as a console script #2738
* Removes CLI option `--dump-license-data`
* Adds new console script `scancode-license-data --path PATH`
* Updates CHANGELOG

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -147,6 +147,7 @@ packages =
 console_scripts =
     scancode = scancode.cli:scancode
     scancode-reindex-licenses = licensedcode.reindex:reindex_licenses
+    scancode-license-data = licensedcode.license_db:dump_scancode_license_data
 
 # These are configurations for ScanCode plugins as setuptools entry points.
 # Each plugin entry hast this form:
