Add COC to redistributed license-like files
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ license_files =
     NOTICE
     AUTHORS.rst
     CHANGELOG.rst
+    CODE_OF_CONDUCT.rst
 
 [options]
 package_dir =
@@ -37,7 +38,7 @@ zip_safe = false
 
 setup_requires = setuptools_scm[toml] >= 4
 
-python_requires = >=3.6.*
+python_requires = >=3.7
 
 install_requires =
 
@@ -50,8 +51,10 @@ where = src
 testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
-    aboutcode-toolkit >= 6.0.0
+    aboutcode-toolkit >= 7.0.2
+    twine
     black
+    isort
 
 docs =
     Sphinx >= 3.3.1
