--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -78,7 +78,7 @@ install_requires =
     gemfileparser2 >= 0.9.0
     html5lib
     importlib_metadata
-    intbitset >= 3.0.0
+    intbitset >= 3.0.2 
     jaraco.functools
     javaproperties >= 0.5
     jinja2 >= 2.7.0
@@ -97,12 +97,12 @@ install_requires =
     pluggy >= 1.0.0
     plugincode >= 31.0.0
     publicsuffix2
-    pyahocorasick >= 2.0.0b1
+    pyahocorasick >= 2.0.0
     pygmars >= 0.7.0
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
-    saneyaml >= 0.5.2
+    saneyaml >= 0.6.0
     spdx_tools == 0.7.0a3
     text_unidecode >= 1.0
     toml >= 0.10.0
