--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ html5lib==1.1
 idna==3.3
 importlib-metadata==4.12.0
 inflection==0.5.1
-intbitset==3.0.1
+intbitset==3.0.2
 isodate==0.6.1
 jaraco.functools==3.5.1
 javaproperties==0.8.1
@@ -51,7 +51,7 @@ pluggy==1.0.0
 plugincode==31.0.0
 ply==3.11
 publicsuffix2==2.20191221
-pyahocorasick==2.0.0b1
+pyahocorasick==2.0.0
 pycparser==2.21
 pygmars==0.7.0
 Pygments==2.12.0
@@ -61,7 +61,7 @@ pytz==2022.1
 PyYAML==6.0
 rdflib==6.2.0
 requests==2.28.1
-saneyaml==0.5.2
+saneyaml==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
 spdx-tools==0.7.0a3
