Add python 3.11 to CI #2730 #2731
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,7 +95,7 @@ jobs:
       parameters:
           job_name: ubuntu18_cpython
           image_name: ubuntu-18.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
@@ -104,7 +104,7 @@ jobs:
       parameters:
           job_name: ubuntu20_cpython
           image_name: ubuntu-20.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
@@ -113,7 +113,7 @@ jobs:
       parameters:
           job_name: ubuntu22_cpython
           image_name: ubuntu-22.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
@@ -122,7 +122,7 @@ jobs:
       parameters:
           job_name: macos11_cpython
           image_name: macos-11
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
@@ -131,7 +131,7 @@ jobs:
       parameters:
           job_name: macos12_cpython
           image_name: macos-12
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
@@ -149,7 +149,7 @@ jobs:
       parameters:
           job_name: win2019_cpython_2
           image_name: windows-2019
-          python_versions: ['3.9', '3.10']
+          python_versions: ['3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs tests\scancode\test_cli.py
@@ -167,7 +167,7 @@ jobs:
       parameters:
           job_name: win2022_cpython_2
           image_name: windows-2022
-          python_versions: ['3.9', '3.10']
+          python_versions: ['3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs tests\scancode\test_cli.py
@@ -182,7 +182,7 @@ jobs:
       parameters:
           job_name: ubuntu20_test_all_supported_click_versions
           image_name: ubuntu-20.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           python_architecture: x64
           test_suites:
               click_versions: |
@@ -202,55 +202,55 @@ jobs:
       parameters:
           job_name: ubuntu22_cpython_latest_from_pip
           image_name: ubuntu-22.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
     - template: etc/ci/azure-posix.yml
       parameters:
           job_name: ubuntu18_cpython_latest_from_pip
           image_name: ubuntu-18.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
     - template: etc/ci/azure-posix.yml
       parameters:
           job_name: ubuntu20_cpython_latest_from_pip
           image_name: ubuntu-20.04
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
     - template: etc/ci/azure-posix.yml
       parameters:
           job_name: macos11_cpython_latest_from_pip
           image_name: macos-11
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
     - template: etc/ci/azure-posix.yml
       parameters:
           job_name: macos12_cpython_latest_from_pip
           image_name: macos-12
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
     - template: etc/ci/azure-win.yml
       parameters:
           job_name: win2019_cpython_latest_from_pip
           image_name: windows-2019
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv\Scripts\pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] &&  venv\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
+              all: venv\Scripts\pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] &&  venv\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
 
     - template: etc/ci/azure-win.yml
       parameters:
           job_name: win2022_cpython_latest_from_pip
           image_name: windows-2022
-          python_versions: ['3.8', '3.9', '3.10']
+          python_versions: ['3.8', '3.9', '3.10', '3.11']
           test_suites:
-              all: venv\Scripts\pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] &&  venv\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
+              all: venv\Scripts\pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] &&  venv\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
 
