--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -62,7 +62,8 @@ py_modules =
 python_requires = >=3.7
 
 install_requires =
-    attrs >= 18.1, !=20.1.0
+    attrs >= 18.1,!=20.1.0;python_version<'3.11'
+    attrs >= 22.1;python_version>='3.11'
     Beautifulsoup4 >= 4.0.0
     boolean.py >= 4.0
     chardet >= 3.0.0
