--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Software Development
     Topic :: Utilities
 
@@ -85,7 +86,7 @@ install_requires =
     jinja2 >= 2.7.0
     jsonstreams >= 0.5.0
     license_expression >= 30.0.0
-    lxml >= 4.9.1
+    lxml >= 4.9.2
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
     packvers >= 21.0.0
