--- a/requirements-native.txt
+++ b/requirements-native.txt
@@ -1,6 +1,6 @@
 cffi==1.15.1
-intbitset==3.0.1
+intbitset==3.0.2
 lxml==4.9.2
 MarkupSafe==2.1.1
-pyahocorasick==2.0.0b1
+pyahocorasick==2.0.0
 PyYAML==6.0
