--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -105,7 +105,7 @@ install_requires =
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
     saneyaml >= 0.6.0
-    spdx_tools == 0.7.0rc0, ==0.7.*
+    spdx_tools == 0.7.0rc0
     text_unidecode >= 1.0
     toml >= 0.10.0
     urlpy
