--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = scancode-toolkit-mini
+name = scancode-toolkit
 version = 32.0.0rc1
 license = Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft
 
@@ -133,6 +133,7 @@ testing =
     black
     isort
     vendorize >= 0.3.0
+    pytest-rerunfailures
 
 docs =
     Sphinx >= 3.3.1
