--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-       pyver: ["3.7", "3.8", "3.9", "3.10"]
+       pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -99,22 +99,24 @@ jobs:
 
     strategy:
       fail-fast: true
+      matrix:
+       pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python
+      - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v1
         with:
-          python-version: "3.8"
+          python-version: ${{ matrix.pyver }} 
 
       - name: Build linux app archive
-        run: etc/release/scancode-create-release-app-linux.sh
+        run: etc/release/scancode-create-release-app-linux.sh ${{ matrix.pyver }}
 
-      - name: Collect built linux app
+      - name: Collect built linux app for python {{ matrix.pyver }}
         uses: actions/upload-artifact@v3
         with:
-          name: linux_app
+          name: linux_app_py_${{ matrix.pyver }}
           path: release/*
 
 
@@ -131,22 +133,24 @@ jobs:
 
     strategy:
       fail-fast: true
+      matrix:
+       pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python
+      - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v1
         with:
-          python-version: "3.8"
+          python-version: ${{ matrix.pyver }} 
 
       - name: Build mac app archive
-        run: etc/release/scancode-create-release-app-macos.sh
+        run: etc/release/scancode-create-release-app-macos.sh ${{ matrix.pyver }}
 
-      - name: Collect built mac app
+      - name: Collect built mac app for python {{ matrix.pyver }}
         uses: actions/upload-artifact@v3
         with:
-          name: macos_app
+          name: macos_app_py_${{ matrix.pyver }}
           path: release/*
 
 
@@ -160,24 +164,27 @@ jobs:
     defaults:
       run:
         shell: bash
+
     strategy:
       fail-fast: true
+      matrix:
+       pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python
+      - name: Set up Python on ${{ matrix.pyver }}
         uses: actions/setup-python@v1
         with:
-          python-version: "3.8"
+          python-version: ${{ matrix.pyver }} 
 
       - name: Build windows app archive
-        run: etc/release/scancode-create-release-app-windows.sh
+        run: etc/release/scancode-create-release-app-windows.sh ${{ matrix.pyver }}
 
-      - name: Collect built windows app
+      - name: Collect built windows app for python {{ matrix.pyver }}
         uses: actions/upload-artifact@v3
         with:
-          name: windows_app
+          name: windows_app_py_${{ matrix.pyver }}
           path: release/*
 
 
@@ -229,7 +236,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04, macos-11, macos-12]
-        pyver: ["3.7", "3.8", "3.9", "3.10"]
+        pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -275,7 +282,7 @@ jobs:
       fail-fast: true
       matrix:
        os: [windows-2019, windows-2022]
-       pyver: ["3.7", "3.8", "3.9", "3.10"]
+       pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -320,7 +327,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
-        pyver: [3.8]
+        pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -330,10 +337,10 @@ jobs:
         with:
           python-version: ${{ matrix.pyver }}
 
-      - name: Download a single artifact linux_app
+      - name: Download a single artifact linux_app_py_${{ matrix.pyver }}
         uses: actions/download-artifact@v3
         with:
-          name: linux_app
+          name: linux_app_py_${{ matrix.pyver }}
           path: dist
 
       - name: test install app archive
@@ -361,7 +368,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [macos-11, macos-12]
-        pyver: [3.8]
+        pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -371,10 +378,10 @@ jobs:
         with:
           python-version: ${{ matrix.pyver }}
 
-      - name: Download a single artifact macos_app
+      - name: Download a single artifact macos_app_py_${{ matrix.pyver }}
         uses: actions/download-artifact@v3
         with:
-          name: macos_app
+          name: macos_app_py_${{ matrix.pyver }}
           path: dist
 
       - name: test install app archive
@@ -402,7 +409,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [windows-2019, windows-2022]
-        pyver: [3.8]
+        pyver: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v2
@@ -412,10 +419,10 @@ jobs:
         with:
           python-version: ${{ matrix.pyver }}
 
-      - name: Download a single artifact windows_app
+      - name: Download a single artifact windows_app_py_${{ matrix.pyver }}
         uses: actions/download-artifact@v3
         with:
-          name: windows_app
+          name: windows_app_py_${{ matrix.pyver }}
           path: dist
 
       - name: test install app archive
@@ -491,7 +498,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        dist_names: ["wheels-3.7", "wheels-3.8", "wheels-3.9", "wheels-3.10", sdists]
+        dist_names: ["wheels-3.7", "wheels-3.8", "wheels-3.9", "wheels-3.10", "wheels-3.11", sdists]
 
     steps:
       - name: Set up Python
