--- a/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
+++ b/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
@@ -21,7 +21,7 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 3.1.0
+    output_format_version: 3.2.0
     message:
     errors: []
     warnings: []
@@ -29,10 +29,10 @@ headers:
       system_environment:
         operating_system: linux
         cpu_architecture: 64
-        platform: Linux-5.15.0-112-generic-x86_64-with-glibc2.35
-        platform_version: '#122-Ubuntu SMP Thu May 23 07:48:21 UTC 2024'
-        python_version: 3.10.12 (main, Nov 20 2023, 15:14:05) [GCC 11.4.0]
-      spdx_license_list_version: '3.23'
+        platform: Linux-5.15.0-119-generic-x86_64-with-glibc2.35
+        platform_version: '#129-Ubuntu SMP Fri Aug 2 19:25:20 UTC 2024'
+        python_version: 3.10.12 (main, Jul 29 2024, 16:56:48) [GCC 11.4.0]
+      spdx_license_list_version: '3.24'
       files_count: 4
 summary:
   declared_license_expression: apache-2.0
@@ -626,6 +626,8 @@ license_rule_references:
     is_license_tag: no
     is_license_intro: no
     is_license_clue: no
+    is_required_phrase: no
+    skip_collecting_required_phrases: no
     is_continuous: no
     is_builtin: yes
     is_from_license: yes
@@ -854,6 +856,8 @@ license_rule_references:
     is_license_tag: yes
     is_license_intro: no
     is_license_clue: no
+    is_required_phrase: no
+    skip_collecting_required_phrases: no
     is_continuous: no
     is_builtin: yes
     is_from_license: no
@@ -879,6 +883,8 @@ license_rule_references:
     is_license_tag: no
     is_license_intro: no
     is_license_clue: no
+    is_required_phrase: no
+    skip_collecting_required_phrases: no
     is_continuous: no
     is_builtin: yes
     is_from_license: no
@@ -904,6 +910,8 @@ license_rule_references:
     is_license_tag: no
     is_license_intro: no
     is_license_clue: no
+    is_required_phrase: no
+    skip_collecting_required_phrases: no
     is_continuous: yes
     is_builtin: yes
     is_from_license: no
@@ -929,6 +937,8 @@ license_rule_references:
     is_license_tag: no
     is_license_intro: no
     is_license_clue: no
+    is_required_phrase: no
+    skip_collecting_required_phrases: no
     is_continuous: no
     is_builtin: yes
     is_from_license: yes
@@ -972,6 +982,8 @@ license_rule_references:
     is_license_tag: no
     is_license_intro: no
     is_license_clue: no
+    is_required_phrase: no
+    skip_collecting_required_phrases: no
     is_continuous: no
     is_builtin: yes
     is_from_license: no
